index.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.header {
  width: 100%;
  height: 100vh;
  background: #007aff;
  color: white;
  padding: 0 8.5%;
  position: relative;
}
.sidebar {
  position: fixed;
  bottom: 50px;
  left: 0;
  width: 40px;
  z-index: 1;
  height: 150px;
  text-align: center;
  background-color: #fbee0f;
  border-radius: 0px 15px 15px 0px;
}
.social-media {
  max-width: 100%;
  height: 150px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
.sidebar img {
  padding: 5px;
  border: 1px;
  max-width: 30px;
  max-height: 30px;
}
.wrapper {
  position: absolute;
  display: flex;
  justify-content: center;
  width: 100%;
  margin-top: 100px;
}
.container {
  display: grid;
  grid-template-columns: auto auto auto;
  background-color: white;
  border: 20px white;
  padding: 5px;
  width: 300px;
  height: 300px;
  grid-gap: 5px;
}
.item-1 {
  min-width: 100%;
  min-height: 100%;
  background-color: #fbee0f;
}
.item-2 {
  min-width: 100%;
  min-height: 100%;
  grid-column-start: 2;
  grid-column-end: 4;
  background-color: #fbee0f;
}
.item-3 {
  min-width: 100%;
  min-height: 100%;
  background-color: #fbee0f;
}
.item-4 {
  min-width: 100%;
  min-height: 100%;
  background-color: #fbee0f;
}
.item-5 {
  min-width: 100%;
  min-height: 100%;
  background-color: #fbee0f;
}

.main {
  width: 100%;
  height: 100vh;
  background: white;
  color: black;
  padding: 0 8.5%;
  position: relative;
}

